--- a/src/service.html
+++ b/src/service.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
  <link rel="stylesheet" href="/public/styles.css">
-
+<link rel="stylesheet" href="./indexStyle.css">
     <title>Services</title>
 </head>
 <body class="">
@@ -58,7 +58,7 @@
           </li>
           <li>
             <a href="./courses.html">
-              <button class="bg-green-700 rounded-md text-white py-2 px-5">Course</button>
+              <button class="bg-green-700 rounded-md text-white py-2 px-5 course-btn">Courses</button>
             </a>
           </li>
         </ul>
@@ -119,7 +119,8 @@ creativity, in university of Osun state. .</p>
     </div>
 </div>
 <div class="py-2  bg-green-600 text-white text-xl">
-    <marquee>Learn more with us . All years available   . Past questions made available for you    . Made by the student council   . Curriculum flexible to fit your time   . Here for you   . UniOsun, your place</marquee>
+  <marquee style="padding:.6rem 0;">Learn more with adequate past questions made available for you and Curriculum flexible to fit your time          ||             Created by <span style="color:#fff;" class="acaspedia">             Innovator's Circle.</span></marquee>
+  
 
   </div>
   <div class="bg-gray-200 px-7 py-20">
@@ -128,8 +129,8 @@ creativity, in university of Osun state. .</p>
             <h1 class="font-bold text-3xl text-green-700 ">STUDENTS FAQ</h1>
         </div>
         <div class="my-5">
-            <span class="text-xl ">Curious about something?, check the frequently asked 
-                questions & if you need more info reach out</span>
+            <span class="text-xl ">Check out our frequently asked 
+                questions,need more info?Kindly reach out.</span>
         </div>
 
       
