--- a/src/blog.html
+++ b/src/blog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
  <link rel="stylesheet" href="/public/styles.css">
+ <link rel="stylesheet" href="./indexStyle.css">
 
     <title>Blog</title>
 </head>
@@ -58,7 +59,7 @@
             </li>
             <li>
               <a href="./courses.html">
-                <button class="bg-green-700 rounded-md text-white py-2 px-5">Course</button>
+                <button class="bg-green-700 rounded-md text-white py-2 px-5 course-btn">Courses</button>
               </a>
             </li>
           </ul>
@@ -77,15 +78,15 @@
 <main class="mb-32">
   <div class="flex justify-between font-montserrat items-center w-[90%] mx-auto py-8">
   <div class="py-2 border-b-2 w-full">
-    <ul class="md:flex gap-7 md:text-sm text-xs hidden ">
-        <li>View all</li>
-        <li>Students</li>
-        <li>Freshers</li>
-        <li>Courses</li>
-        <li>Activities</li>
-        <li>Tech Life</li>
-        <li>Events</li>
-        <li>Accomdation</li>
+    <ul class="md:flex gap-7 md:text-sm text-xs hidden">
+        <li class="links">View all</li>
+        <li class="links">Students</li>
+        <li class="links">Freshers</li>
+        <li class="links">Courses</li>
+        <li class="links">Activities</li>
+        <li class="links">Tech Life</li>
+        <li class="links">Events</li>
+        <li class="links">Accomdation</li>
     </ul>
   </div>
    
@@ -167,12 +168,12 @@
 
   </div>
   <div class="flex justify-center my-7">
-    <button class="bg-green-500 text-white px-7 py-2 rounded-md text-sm">Load More</button>
+    <button class="bg-green-500 text-white px-7 py-2 rounded-md text-sm">View More</button>
   </div>
 </main>
 <div class="py-2  bg-green-600 text-white text-xl">
-  <marquee>Learn more with us . All years available . Past questions made available for you . Made by the student
-    council . Curriculum flexible to fit your time . Here for you . UniOsun, your place</marquee>
+  <marquee style="padding:.6rem 0;">Learn more with adequate past questions made available for you and Curriculum flexible to fit your time          ||             Created by <span style="color:#fff;" class="acaspedia">             Innovator's Circle.</span></marquee>
+
 
 </div>
 
@@ -247,5 +248,6 @@
     <script>
       AOS.init({ duration: 2000 });
     </script>
+  
 </body>
 </html>
