--- a/src/courses.html
+++ b/src/courses.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     
+        <link rel="stylesheet" href="./indexStyle.css">
   
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="./home_assets/main.css">
@@ -61,7 +62,7 @@
            </li>
            <li>
              <a href="./courses.html">
-               <button class="bg-green-700 rounded-md text-white py-2 px-5">Course</button>
+               <button class="bg-green-700 rounded-md text-white py-2 px-5 course-btn">Courses</button>
              </a>
            </li>
          </ul>
