--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
 
   <!-- hero -->
   <div 
-  style="padding:0 3rem"
+
   class="md:px-10 bg-green-100 pt-4 md:pt-20 px-4  gap-4 grid md:grid-cols-1 lg:grid-cols-2">
     <div class="md:px-10 md:py-32 ">
       <div>
@@ -93,7 +93,7 @@
           look no further!
         </span>
       </div>
-      <div class="flex">
+      <div class="flex my-4">
         <input type="text" class="w-full border-0 rounded">
         <button class="bg-green-600 px-4 text-white rounded-tr-md rounded-br-md">Search</button>
       </div>
@@ -109,13 +109,13 @@
     </div>
   </div>
 
-  <div class="bg-gray-100 md:px-10 mx-auto items-center py-10 px-4 scroll-transition">
-    <div style="padding:2rem 0" class="text-center py-5">
+  <div class="bg-gray-100 md:px-10 mx-auto items-center py-10 px-4 ">
+    <div  class="text-center py-5">
       <h1 class="text-3xl py-4 text-green-600 font-bold">BROWSER COURSE</h1>
       <span>Choose from a variety of past questions you’ll like to study</span>
     </div>
-    <div style="padding: 0 3.4rem;" class="grid gap-6 grid-cols-1 md:grid-cols-2  lg:grid-cols-4">
-      <div  class=" bg-green-800 rounded-xl cardHeight">
+    <div  class="grid gap-6 grid-cols-1 md:grid-cols-2  lg:grid-cols-4">
+      <div  class=" bg-green-800 rounded-xl">
         <div class="text-center text-white py-5 ">
           <h2 class="text-xl">MTH101</h2>
         </div>
@@ -178,8 +178,8 @@
     </div>
   </div>
 
-  <div style="padding:0 3rem" class=" bg-green-100  pt-20 items-center  gap-4 grid md:grid-cols-1 lg:grid-cols-2 scroll-transition">
-    <div class="px-8">
+  <div  class=" bg-green-100  pt-20 items-center  gap-4 grid md:grid-cols-1 lg:grid-cols-2 scroll-transition">
+    <div class="px-10">
       <div>
         <h1 class="text-3xl text-green-600 font-bold">What We Have To Offer</h1>
       </div>
@@ -204,9 +204,9 @@
   </div>
 
 
-  <div style="padding:3rem 3rem;" class=" bg-gray-100  pt-20   gap-4 grid md:grid-cols-1 lg:grid-cols-2 scroll-transition ">
+  <div class=" bg-gray-100  pt-20   gap-4 grid md:grid-cols-1 lg:grid-cols-2 scroll-transition ">
     <div>
-      <img class="w-[2000px]" src="./asset/Group 8781.png" alt="">
+      <img class="w-[1000px]" src="./asset/Group 8781.png" alt="">
     </div>
     <div class="px-8 mb-6 text-right">
       <div class="mb-48">
@@ -244,7 +244,7 @@
   </div>
 
 
-  <div class=" bg-green-100 px-5  py-20 items-center scroll-transition">
+  <div class=" bg-green-100 px-5 py-14  md:py-20 items-center scroll-transition">
     <div style="position:relative;padding:1rem 3rem;" class="text-center space-y-4">
       <h1 class="text-2xl font-bold text-green-600">BLOG</h1>
       <span class="text-xl">we give updates on what is going on within the school</span>
