--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <a href="index.html">
           <img src="./asset/logo1.png" alt="" />
         </a>
-        
+
       </div>
       <button data-collapse-toggle="navbar-default" type="button"
         class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -79,12 +79,12 @@
   <!-- /header -->
 
   <!-- hero -->
-  <div 
-
-  class="md:px-10 bg-green-100 pt-4 md:pt-20 px-4  gap-4 grid md:grid-cols-1 lg:grid-cols-2">
+  <div class="md:px-10 bg-green-100 pt-4 md:pt-20 px-4  gap-4 grid md:grid-cols-1 lg:grid-cols-2">
     <div class="md:px-10 md:py-32 ">
       <div>
-        <h2 style="font-size:40px;line-height:48px;" class="md:text-6xl space-x-5 text-4xl font-semibold">Welcome to <span class="acaspedia">ACASPEDIA</span></h2>
+        <h2 style="font-size:40px;line-height:48px;" class="md:text-6xl space-x-5 text-4xl font-semibold">Welcome to
+          <span class="acaspedia">ACASPEDIA</span>
+        </h2>
       </div>
       <div class="my-5">
         <span style="font-size: 23px;font-weight: 200;line-height:150%" class="leading-7 text-md">
@@ -110,12 +110,12 @@
   </div>
 
   <div class="bg-gray-100 md:px-10 mx-auto items-center py-10 px-4 ">
-    <div  class="text-center py-5">
+    <div class="text-center py-5">
       <h1 class="text-3xl py-4 text-green-600 font-bold">BROWSER COURSE</h1>
       <span>Choose from a variety of past questions you’ll like to study</span>
     </div>
-    <div  class="grid gap-6 grid-cols-1 md:grid-cols-2  lg:grid-cols-4">
-      <div  class=" bg-green-800 rounded-xl">
+    <div class="grid gap-6 grid-cols-1 md:grid-cols-2  lg:grid-cols-4">
+      <div class=" bg-green-800 rounded-xl">
         <div class="text-center text-white py-5 ">
           <h2 class="text-xl">MTH101</h2>
         </div>
@@ -151,7 +151,8 @@
 
     </div>
     <div class="flex justify-center my-10">
-      <button style="position:relative;top:1rem;padding:1rem 3rem;" class="px-7 py-3 bg-green-500 text-white rounded-lg">View More</button>
+      <button style="position:relative;top:1rem;padding:1rem 3rem;"
+        class="px-7 py-3 bg-green-500 text-white rounded-lg">View More</button>
     </div>
 
 
@@ -159,7 +160,9 @@
   </div>
 
   <div class="py-2  bg-green-600 text-white text-xl">
-    <marquee style="padding:.6rem 0;">Learn more with adequate past questions made available for you and Curriculum flexible to fit your time          ||             Created by <span style="color:#fff;" class="acaspedia">             Innovator's Circle.</span></marquee>
+    <marquee style="padding:.6rem 0;">Learn more with adequate past questions made available for you and Curriculum
+      flexible to fit your time || Created by <span style="color:#fff;" class="acaspedia"> Innovator's Circle.</span>
+    </marquee>
 
   </div>
   <div class="bg-gray-100 md:px-10 mx-auto text-center items-center py-10 px-4 scroll-transition">
@@ -174,11 +177,12 @@
       <img src="./asset/Group 8779 (1).png" alt="">
     </div>
     <div class="flex justify-center my-10">
-      <button style="position:relative;top:1rem;padding:1rem 3rem;" class="px-7 py-3 bg-green-500 text-white rounded-lg">View all</button>
+      <button style="position:relative;top:1rem;padding:1rem 3rem;"
+        class="px-7 py-3 bg-green-500 text-white rounded-lg">View all</button>
     </div>
   </div>
 
-  <div  class=" bg-green-100  pt-20 items-center  gap-4 grid md:grid-cols-1 lg:grid-cols-2 scroll-transition">
+  <div class=" bg-green-100  pt-20 items-center  gap-4 grid md:grid-cols-1 lg:grid-cols-2 scroll-transition">
     <div class="px-10">
       <div>
         <h1 class="text-3xl text-green-600 font-bold">What We Have To Offer</h1>
@@ -236,11 +240,6 @@
 
       </div>
     </div>
-
-
-
-
-
   </div>
 
 
@@ -355,9 +354,7 @@
         </div>
         <div class="hidden  md:flex flex-col md:flex-row mt-8 w-full">
           <input class="grow" type="text" name="" id="" />
-          <button
-            class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg"
-          >
+          <button class="text-sm px-2 bg-green-600 rounded-tr-lg rounded-br-lg">
             Subscribe
           </button>
         </div>
@@ -365,10 +362,8 @@
     </div>
     <div class="mt-3 md:hidden">
       <input class="max-w-md" type="text" name="" id="" />
-      <button
-        class="text-sm p-2.5 bg-green-600 rounded-tr-lg rounded-br-lg"
-      >
-      Subscribe
+      <button class="text-sm p-2.5 bg-green-600 rounded-tr-lg rounded-br-lg">
+        Subscribe
       </button>
   </footer>
 
@@ -393,23 +388,23 @@
   <script>
     AOS.init({ duration: 2000 });
   </script>
-<script>
-  function showOnScroll() {
-  var elements = document.getElementsByClassName("scroll-transition");
+  <script>
+    function showOnScroll() {
+      var elements = document.getElementsByClassName("scroll-transition");
 
-  for (var i = 0; i < elements.length; i++) {
-    var element = elements[i];
-    var position = element.getBoundingClientRect().top;
-    var windowHeight = window.innerHeight;
+      for (var i = 0; i < elements.length; i++) {
+        var element = elements[i];
+        var position = element.getBoundingClientRect().top;
+        var windowHeight = window.innerHeight;
 
-    if (position < windowHeight * 0.8) {
-      element.classList.add("show"); // Adds the "show" class to make the element visible
+        if (position < windowHeight * 0.8) {
+          element.classList.add("show"); // Adds the "show" class to make the element visible
+        }
+      }
     }
-  }
-}
 
-window.addEventListener("scroll", showOnScroll);
-</script>
+    window.addEventListener("scroll", showOnScroll);
+  </script>
 </body>
 
 </html>
